--- a/vocabulary/src/main/resources/vocabularies/external/rdf.yaml
+++ b/vocabulary/src/main/resources/vocabularies/external/rdf.yaml
@@ -5,3 +5,5 @@ classTerms:
   Property:
     displayName: Property
     description: rdf:Property is the class of RDF properties. rdf:Property is an instance of rdfs:Class.
+  Seq:
+    displayName: Seq
