--- a/vocabulary/src/main/resources/vocabularies/external/rdfs.yaml
+++ b/vocabulary/src/main/resources/vocabularies/external/rdfs.yaml
@@ -1,6 +1,8 @@
 #%Vocabulary 1.0
 base: http://www.w3.org/2000/01/rdf-schema#
 usage: RDFS vocabulary
+uses:
+  data: data_model.yaml
 propertyTerms:
   domain:
     displayName: domain
@@ -9,7 +11,7 @@ propertyTerms:
   member:
     displayName: member
     description: rdfs:member is an instance of rdf:Property that is a super-property of all the container membership properties i.e. each container membership property has an rdfs:subPropertyOf relationship to the property rdfs:member.
-    range: uri
+    range: data.Node
   range:
     displayName: range
     description: Range of the proeprty term, scalar or object
