--- a/vocabulary/src/main/resources/dialects/canonical_webapi.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi.yaml
@@ -29,6 +29,8 @@ nodeMappings:
       Nil: NilShape
       Scalar: ScalarShape
       Any: AnyShape
+      Recursive: RecursiveShape
+    
     union:
       - UnionShape
       - TupleShape
@@ -40,6 +42,7 @@ nodeMappings:
       - NilShape
       - ScalarShape
       - AnyShape
+      - RecursiveShape
     
   SecuritySettingsUnion:
     typeDiscriminatorName: type
@@ -49,6 +52,7 @@ nodeMappings:
       APIKey: APIKeySettings
       Http: HTTPSettings
       OpenID: OpenIDSettings
+    
     union:
       - OAuth2Settings
       - OAuth1Settings
@@ -61,7 +65,7 @@ nodeMappings:
     extends: AnyShape
     mapping:
       mediaType:
-        propertyTerm: shacl.mediaType
+        propertyTerm: core.mediaType
         range: string
 
   RecursiveShape:
@@ -118,6 +122,7 @@ nodeMappings:
         range:
           - ParametrizedTrait
         allowMultiple: true
+    
       method:
         propertyTerm: apiContract.method
         range: string
@@ -188,10 +193,10 @@ nodeMappings:
     classTerm: security.Scope
     mapping:
       name:
-        propertyTerm: security.name
+        propertyTerm: core.name
         range: string
       description:
-        propertyTerm: security.description
+        propertyTerm: core.description
         range: string
 
 
@@ -237,7 +242,8 @@ nodeMappings:
         allowMultiple: true
       examples:
         propertyTerm: apiContract.examples
-        range: Examples
+        range: Example
+        allowMultiple: true
 
 
   OAuth2Settings:
@@ -274,7 +280,7 @@ nodeMappings:
 
 
   ResourceType:
-    classTerm: doc.ResourceType
+    classTerm: apiContract.ResourceType
     mapping:
       name:
         propertyTerm: core.name
@@ -289,7 +295,7 @@ nodeMappings:
 
 
   ParametrizedTrait:
-    classTerm: doc.ParametrizedTrait
+    classTerm: apiContract.ParametrizedTrait
     mapping:
       name:
         propertyTerm: core.name
@@ -441,7 +447,7 @@ nodeMappings:
     classTerm: security.ApiKeySettings
     mapping:
       name:
-        propertyTerm: security.name
+        propertyTerm: core.name
         range: string
       in:
         propertyTerm: security.in
@@ -629,7 +635,7 @@ nodeMappings:
 
 
   ParametrizedResourceType:
-    classTerm: doc.ParametrizedResourceType
+    classTerm: apiContract.ParametrizedResourceType
     mapping:
       name:
         propertyTerm: core.name
@@ -650,12 +656,6 @@ nodeMappings:
     classTerm: raml-shapes.AnyShape
     extends: Shape
     mapping:
-      raw:
-        propertyTerm: shacl.raw
-        range: string
-      referenceId:
-        propertyTerm: doc.reference-id
-        range: link
       documentation:
         propertyTerm: core.documentation
         range: CreativeWork
@@ -664,7 +664,17 @@ nodeMappings:
         range: XMLSerializer
       examples:
         propertyTerm: apiContract.examples
-        range: Examples
+        range: Example
+        allowMultiple: true
+      raw:
+        propertyTerm: doc.raw
+        range: string
+      referenceId:
+        propertyTerm: doc.reference-id
+        range: link
+      location:
+        propertyTerm: doc.location
+        range: string
 
 
   CustomDomainProperty:
@@ -680,15 +690,6 @@ nodeMappings:
       name:
         propertyTerm: core.name
         range: string
-
-
-  Examples:
-    classTerm: apiContract.NamedExamples
-    mapping:
-      examples:
-        propertyTerm: apiContract.examples
-        range: Example
-        allowMultiple: true
 
 
   Tag:
@@ -728,11 +729,14 @@ nodeMappings:
     classTerm: doc.ExternalSource
     mapping:
       raw:
-        propertyTerm: shacl.raw
+        propertyTerm: doc.raw
         range: string
       referenceId:
         propertyTerm: doc.reference-id
         range: link
+      location:
+        propertyTerm: doc.location
+        range: string
 
 
   ShapeExtension:
@@ -749,6 +753,9 @@ nodeMappings:
       value:
         propertyTerm: data.value
         range: string
+      dataType:
+        propertyTerm: shacl.datatype
+        range: link
       name:
         propertyTerm: core.name
         range: string
@@ -827,8 +834,8 @@ nodeMappings:
   Server:
     classTerm: apiContract.Server
     mapping:
-      url:
-        propertyTerm: apiContract.url
+      urlTemplate:
+        propertyTerm: core.urlTemplate
         range: string
       description:
         propertyTerm: core.description
@@ -963,7 +970,8 @@ nodeMappings:
         allowMultiple: true
       examples:
         propertyTerm: apiContract.examples
-        range: Examples
+        range: Example
+        allowMultiple: true
 
 
   Organization:
@@ -1005,7 +1013,7 @@ nodeMappings:
         propertyTerm: core.mediaType
         range: string
       raw:
-        propertyTerm: shacl.raw
+        propertyTerm: doc.raw
         range: string
       referenceId:
         propertyTerm: doc.reference-id
@@ -1022,14 +1030,15 @@ nodeMappings:
         propertyTerm: core.name
         range: string
       mediaType:
-        propertyTerm: apiContract.mediaType
+        propertyTerm: core.mediaType
         range: string
       schema:
         propertyTerm: apiContract.schema
         range: DataShapesUnion
       examples:
         propertyTerm: apiContract.examples
-        range: Examples
+        range: Example
+        allowMultiple: true
       encoding:
         propertyTerm: apiContract.encoding
         range: Encoding
@@ -1123,7 +1132,7 @@ nodeMappings:
 
 
   Trait:
-    classTerm: doc.Trait
+    classTerm: apiContract.Trait
     mapping:
       name:
         propertyTerm: core.name
@@ -1198,8 +1207,4 @@ documents:
       dataShapes: DataShapesUnion
       resourceTypes: ResourceType
       traits: Trait
-      securitySchemes: SecurityScheme
-      parameters: Parameter
-      responses: Response
-
   
