--- a/vocabulary/src/main/resources/vocabularies/external/owl.yaml
+++ b/vocabulary/src/main/resources/vocabularies/external/owl.yaml
@@ -1,8 +1,8 @@
 #%Vocabulary 1.0
 base: http://www.w3.org/2002/07/owl#
 usage: OWL2 vocabulary
-uses:
-  meta: aml_meta.yaml
+external:
+  meta: http://a.ml/vocabularies/meta#
 classTerms:
   Class:
     displayName: Class
